2012-07-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-04
        * Mods to allow extended PPrStabilityMon to run on Tier0.

2012-07-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-03
        * Use explicit CLHEP namespace.

2012-06-12  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-02
        * Updates from Hardeep.

2012-05-28  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-01
        * Change back to tight electrons in EmEfficienciesMonTool.

2012-05-22  Patrick Rieck <rieck@physik.hu-berlin.de>
        * Tag as TrigT1CaloMonitoring-00-12-00
        * Update of PPrStabilityMon for extended monitoring.

2012-05-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-14
        * Fix Savannah bug #94614 - two typos in EmEfficienciesMonTool.

2012-05-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-13
        * Change cut to improve statistics in EM efficiency plots.

2012-05-08  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-12
        * Fix initialisation errors.

2012-05-08  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-11
        * Another fix from Hardeep.

2012-05-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-10
        * Fix to JetEfficienciesMonTool from Hardeep.

2012-05-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-09
        * JobOptions update.

2012-04-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-08
        * Change to filling RMS plots in post processing.

2012-04-20  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-07
        * JobOptions update.
