@@ -12,7 +12,6 @@
 
 #include "LWHists/TH2F_LW.h"
 #include "LWHists/TH2I_LW.h"
-#include "LWHists/TProfile2D_LW.h"
 
 #include "GaudiKernel/MsgStream.h"
 #include "GaudiKernel/StatusCode.h"
@@ -24,10 +23,7 @@
 #include "TrigT1CaloUtils/TriggerTowerKey.h"
 #include "TrigT1CaloToolInterfaces/IL1TriggerTowerTool.h"
 #include "TrigT1Interfaces/TrigT1CaloDefs.h"
-#include "TrigT1CaloCondSvc/L1CaloCondSvc.h"
 #include "TrigT1CaloCalibConditions/L1CaloCoolChannelId.h"
-#include "TrigT1CaloCalibConditions/L1CaloPprConditionsContainer.h"
-#include "TrigT1CaloCalibConditions/L1CaloPprConditions.h"
 #include "TrigT1CaloMonitoringTools/TrigT1CaloLWHistogramTool.h"
 
 #include "TrigT1CaloMonitoring/PPMSimBSMon.h"
@@ -37,10 +33,9 @@ PPMSimBSMon::PPMSimBSMon(const std::string & type,
 			 const std::string & name,
 			 const IInterface* parent)
   : ManagedMonitorToolBase(type, name, parent),
-    m_l1CondSvc("L1CaloCondSvc", name),
     m_ttTool("LVL1::L1TriggerTowerTool/L1TriggerTowerTool"), 
     m_histTool("TrigT1CaloLWHistogramTool"),
-    m_conditionsContainer(0), m_debug(false), m_events(0),
+    m_debug(false), m_events(0),
     m_histBooked(false),
     m_h_ppm_em_2d_etaPhi_tt_lut_SimEqData(0),
     m_h_ppm_em_2d_etaPhi_tt_lut_SimNeData(0),
@@ -50,20 +45,6 @@ PPMSimBSMon::PPMSimBSMon(const std::string & type,
     m_h_ppm_had_2d_etaPhi_tt_lut_SimNeData(0),
     m_h_ppm_had_2d_etaPhi_tt_lut_SimNoData(0),
     m_h_ppm_had_2d_etaPhi_tt_lut_DataNoSim(0),
-    m_h_ppm_em_2d_etaPhi_tt_ped_runavg(0),
-    m_h_ppm_had_2d_etaPhi_tt_ped_runavg(0),
-    m_h_ppm_em_2d_etaPhi_tt_ped_worstavg(0),
-    m_h_ppm_had_2d_etaPhi_tt_ped_worstavg(0),
-    m_h_ppm_em_2d_etaPhi_tt_ped_runrms(0),
-    m_h_ppm_had_2d_etaPhi_tt_ped_runrms(0),
-    m_h_ppm_em_2d_etaPhi_tt_ped_instavg(0),
-    m_h_ppm_had_2d_etaPhi_tt_ped_instavg(0),
-    m_h_ppm_em_2d_etaPhi_tt_ped_instrms(0),
-    m_h_ppm_had_2d_etaPhi_tt_ped_instrms(0),
-    m_h_ppm_em_2d_etaPhi_tt_ped_instavg_B(0),
-    m_h_ppm_had_2d_etaPhi_tt_ped_instavg_B(0),
-    m_h_ppm_em_2d_etaPhi_tt_ped_instrms_B(0),
-    m_h_ppm_had_2d_etaPhi_tt_ped_instrms_B(0),
     m_h_ppm_2d_LUT_MismatchEvents_cr0cr1(0),
     m_h_ppm_2d_LUT_MismatchEvents_cr2cr3(0),
     m_h_ppm_2d_LUT_MismatchEvents_cr4cr5(0),
@@ -76,7 +57,6 @@ PPMSimBSMon::PPMSimBSMon(const std::string & type,
   
   declareProperty("RootDirectory", m_rootDir = "L1Calo");
 
-  declareProperty("PedestalSampleSize", m_instantaneous=400);
   declareProperty("SimulationADCCut", m_simulationADCCut = 36);
   declareProperty("OnlineTest", m_onlineTest = false,
                   "Test online code when running offline");
@@ -104,11 +84,6 @@ StatusCode PPMSimBSMon:: initialize()
 
   sc = ManagedMonitorToolBase::initialize();
   if (sc.isFailure()) return sc;
-
-  sc = m_l1CondSvc.retrieve();
-  if(sc.isFailure()){
-    msg(MSG::WARNING) << "Could not retrieve L1CaloCondSvc" << endreq;
-  }
 
   sc = m_ttTool.retrieve();
   if( sc.isFailure() ) {
@@ -152,32 +127,10 @@ StatusCode PPMSimBSMon::bookHistograms(bool isNewEventsBlock,
   if ( isNewEventsBlock || isNewLumiBlock ) { }
   
   if( isNewRun ) {
-    
-    m_conditionsContainer = 0;
-    if (m_l1CondSvc) {
-      msg(MSG::DEBUG) << "Retrieving Conditions Containers " << endreq;
-      
-      StatusCode sc = m_l1CondSvc->retrieve(m_conditionsContainer);
-      if (sc.isFailure()) {
-	msg(MSG::WARNING) << "Could not retrieve Conditions Container " << endreq;
-	return sc;
-      }
-      msg(MSG::DEBUG) << "Retrieved Conditions Container " << endreq;
-    }
-    
-    else {
-      msg(MSG::WARNING) << "Could not retrieve Conditions Containers" << endreq;
-    }
-    
-    
 
   std::string dir(m_rootDir + "/PPM/Errors/Data_Simulation");
-  MonGroup monShift ( this, dir, shift, run );
-  MonGroup monExpert( this, dir, expert, run );
   MonGroup monPPM   ( this, dir + "/PPMLUTSim", expert, run );
   MonGroup monEvent ( this, dir + "/MismatchEventNumbers", expert, run, "", "eventSample" );
-  std::string dirPed (m_rootDir + "/PPM/ADC/Pedestal");
-  MonGroup monPed ( this, dirPed, expert, run);
 
   // LUT
 
@@ -207,69 +160,8 @@ StatusCode PPMSimBSMon::bookHistograms(bool isNewEventsBlock,
   m_h_ppm_had_2d_etaPhi_tt_lut_DataNoSim = m_histTool->bookPPMHadEtaVsPhi(
     "ppm_had_2d_etaPhi_tt_lut_DataNoSim",
     "PPM LUT HAD Data but no Simulation");
-
-  // Overall pedestal
- 
-  m_histTool->setMonGroup(&monPed);
-
-  m_h_ppm_em_2d_etaPhi_tt_ped_runavg = m_histTool->bookProfilePPMEmEtaVsPhi(
-    "ppm_em_2d_etaPhi_tt_ped_runavg",
-    "PPM Mean Pedestal Difference EM (over run)");
-  m_h_ppm_had_2d_etaPhi_tt_ped_runavg = m_histTool->bookProfilePPMHadEtaVsPhi(
-    "ppm_had_2d_etaPhi_tt_ped_runavg",
-    "PPM Mean Pedestal Difference Had (over run)");
-  
-  m_h_ppm_em_2d_etaPhi_tt_ped_runrms = m_histTool->bookPPMEmEtaVsPhi(
-    "ppm_em_2d_etaPhi_tt_ped_runrms",
-    "PPM rms Pedestal Difference EM (over run)");
-  m_h_ppm_had_2d_etaPhi_tt_ped_runrms = m_histTool->bookPPMHadEtaVsPhi(
-    "ppm_had_2d_etaPhi_tt_ped_runrms",
-    "PPM rms Pedestal Difference Had (over run)");
-
-  if(m_onlineTest || m_environment == AthenaMonManager::online) {
-
-    m_histTool->setMonGroup(&monPed);
-
-    m_h_ppm_em_2d_etaPhi_tt_ped_worstavg = m_histTool->bookPPMEmEtaVsPhi(
-      "ppm_em_2d_etaPhi_tt_ped_worstavg",
-      "PPM Worst Pedestal Difference EM (over run)");
-    m_h_ppm_had_2d_etaPhi_tt_ped_worstavg = m_histTool->bookPPMHadEtaVsPhi(
-      "ppm_had_2d_etaPhi_tt_ped_worstavg",
-      "PPM Worst Pedestal Difference Had (over run)");
-
-    m_h_ppm_em_2d_etaPhi_tt_ped_instavg = m_histTool->bookProfilePPMEmEtaVsPhi(
-      "ppm_em_2d_etaPhi_tt_ped_instavg",
-      "PPM Mean Pedestal Difference EM (instantaneous)");
-    m_h_ppm_had_2d_etaPhi_tt_ped_instavg = m_histTool->bookProfilePPMHadEtaVsPhi(
-      "ppm_had_2d_etaPhi_tt_ped_instavg",
-      "PPM Mean Pedestal Difference Had (instantaneous)");
-
-    m_h_ppm_em_2d_etaPhi_tt_ped_instrms = m_histTool->bookPPMEmEtaVsPhi(
-      "ppm_em_2d_etaPhi_tt_ped_instrms",
-      "PPM rms Pedestal Difference EM (instantaneous)");
-    m_h_ppm_had_2d_etaPhi_tt_ped_instrms = m_histTool->bookPPMHadEtaVsPhi(
-      "ppm_had_2d_etaPhi_tt_ped_instrms",
-      "PPM rms Pedestal Difference Had (instantaneous)");
-    
-    m_histTool->unsetMonGroup();
-
-    m_h_ppm_em_2d_etaPhi_tt_ped_instavg_B = m_histTool->bookProfilePPMEmEtaVsPhi(
-      "ppm_em_2d_etaPhi_tt_ped_instavg_B",
-      "PPM Mean Pedestal Difference EM (instantaneous [B])");
-    m_h_ppm_had_2d_etaPhi_tt_ped_instavg_B = m_histTool->bookProfilePPMHadEtaVsPhi(
-      "ppm_had_2d_etaPhi_tt_ped_instavg_B",
-      "PPM Mean Pedestal Difference Had (instantaneous [B])");
-   
-    m_h_ppm_em_2d_etaPhi_tt_ped_instrms_B = m_histTool->bookPPMEmEtaVsPhi(
-      "ppm_em_2d_etaPhi_tt_ped_instrms_B",
-      "PPM rms Pedestal Difference EM (instantaneous [B])");
-    m_h_ppm_had_2d_etaPhi_tt_ped_instrms_B = m_histTool->bookPPMHadEtaVsPhi(
-      "ppm_had_2d_etaPhi_tt_ped_instrms_B",
-      "PPM rms Pedestal Difference Had (instantaneous [B])");
-  
-  }
 							
-  // Mismatch Histograms
+  // Mismatch Event Number Histograms
 
   m_histTool->setMonGroup(&monEvent);
 
@@ -318,64 +210,6 @@ StatusCode PPMSimBSMon::fillHistograms()
   if (triggerTowerTES) {
     simulateAndCompare(triggerTowerTES);
   }
-
-
-  if ((m_environment == AthenaMonManager::online || m_onlineTest) && (m_events%int(0.5*m_instantaneous)==0)) {
-    double worst_value = 0.;
-    double minValue    = 0.;
-    double maxValue    = 0.;
-    int worst_binx = 0;
-    int worst_biny = 0;
-    int minBinx    = 0;
-    int minBiny    = 0;
-    int maxBinx    = 0;
-    int maxBiny    = 0;
-    m_histTool->getMinMaxBin(m_h_ppm_em_2d_etaPhi_tt_ped_instavg,
-                       minBinx, minBiny, maxBinx, maxBiny, minValue, maxValue);
-    if(fabs(minValue) > fabs(maxValue)){
-      worst_value = minValue;
-      worst_binx  = minBinx;
-      worst_biny  = minBiny;
-    }
-    else {
-      worst_value = maxValue;
-      worst_binx  = maxBinx;
-      worst_biny  = maxBiny;
-    }
-    if(fabs(worst_value)>fabs(m_h_ppm_em_2d_etaPhi_tt_ped_worstavg->GetBinContent(worst_binx, worst_biny))) {
-      m_histTool->setBinPPMEmEtaVsPhi(m_h_ppm_em_2d_etaPhi_tt_ped_worstavg,
-                                      worst_binx, worst_biny, worst_value);
-    }
-    m_histTool->replaceContents(m_h_ppm_em_2d_etaPhi_tt_ped_instavg,
-                                m_h_ppm_em_2d_etaPhi_tt_ped_instavg_B);
-    m_h_ppm_em_2d_etaPhi_tt_ped_instavg_B->Reset();
-    m_histTool->replaceContents(m_h_ppm_em_2d_etaPhi_tt_ped_instrms,
-                                m_h_ppm_em_2d_etaPhi_tt_ped_instrms_B);
-    m_h_ppm_em_2d_etaPhi_tt_ped_instrms_B->Reset();	    
-    
-    m_histTool->getMinMaxBin(m_h_ppm_had_2d_etaPhi_tt_ped_instavg,
-                       minBinx, minBiny, maxBinx, maxBiny, minValue, maxValue);
-    if(fabs(minValue) > fabs(maxValue)){
-      worst_value = minValue;
-      worst_binx  = minBinx;
-      worst_biny  = minBiny;
-    }
-    else {
-      worst_value = maxValue;
-      worst_binx  = maxBinx;
-      worst_biny  = maxBiny;
-    }
-    if(fabs(worst_value)>fabs(m_h_ppm_had_2d_etaPhi_tt_ped_worstavg->GetBinContent(worst_binx, worst_biny))) {
-      m_histTool->setBinPPMHadEtaVsPhi(m_h_ppm_had_2d_etaPhi_tt_ped_worstavg,
-                                       worst_binx, worst_biny, worst_value);
-    }
-    m_histTool->replaceContents(m_h_ppm_had_2d_etaPhi_tt_ped_instavg,
-                                m_h_ppm_had_2d_etaPhi_tt_ped_instavg_B);
-    m_h_ppm_had_2d_etaPhi_tt_ped_instavg_B->Reset();
-    m_histTool->replaceContents(m_h_ppm_had_2d_etaPhi_tt_ped_instrms,
-                                m_h_ppm_had_2d_etaPhi_tt_ped_instrms_B);
-    m_h_ppm_had_2d_etaPhi_tt_ped_instrms_B->Reset();
-  }
   
   if (m_debug) msg(MSG::DEBUG) << "Leaving fillHistograms" << endreq;
 
@@ -393,15 +227,6 @@ StatusCode PPMSimBSMon::procHistograms(bool isEndOfEventsBlock,
   }
 
   if (isEndOfRun) {
-
-    if(m_onlineTest || m_environment == AthenaMonManager::online) {
-
-      LWHist::safeDelete(m_h_ppm_em_2d_etaPhi_tt_ped_instavg_B);
-      LWHist::safeDelete(m_h_ppm_had_2d_etaPhi_tt_ped_instavg_B);
-      LWHist::safeDelete(m_h_ppm_em_2d_etaPhi_tt_ped_instrms_B);
-      LWHist::safeDelete(m_h_ppm_had_2d_etaPhi_tt_ped_instrms_B);
-
-    }
   }
 
   return StatusCode::SUCCESS;
@@ -511,130 +336,12 @@ void PPMSimBSMon::simulateAndCompare(const TriggerTowerCollection* ttIn)
     const int datEm  = tt->emEnergy();
     const int datHad = tt->hadEnergy();
 
-    int em_offset = 0;
-    
-    if (m_conditionsContainer) {
-      const L1CaloPprConditions* em_LUT = m_conditionsContainer->pprConditions(em_coolId);
-      if (em_LUT) {
-	em_offset   = em_LUT->pedMean();
-      } 
-      else if (m_debug) msg(MSG::DEBUG) << "::lut: No L1CaloPprConditions found" << endreq;
-    } 
-    else if (m_debug) msg(MSG::DEBUG) << "::lut: No Conditions Container retrieved" << endreq;
-
-    const bool em_notSignal = (datEm==0 && !(m_ttTool->disabledChannel(em_coolId)));
-
-    int had_offset = 0;
-
-    if (m_conditionsContainer) {
-      const L1CaloPprConditions* had_LUT = m_conditionsContainer->pprConditions(had_coolId);
-      if (had_LUT) {
-	had_offset   = had_LUT->pedMean();
-      } 
-      else if (m_debug) msg(MSG::DEBUG) << "::lut: No L1CaloPprConditions found" << endreq;
-    } 
-    else if (m_debug) msg(MSG::DEBUG) << "::lut: No Conditions Container retrieved" << endreq;
-
-    const bool had_notSignal = (datHad==0 && !(m_ttTool->disabledChannel(had_coolId)));
-    
-    const double eta = tt->eta();
-    const double phi = tt->phi();
-  
-    int tt_accept = 1;
-
-    for(int i=0; i<emSlices; i++) {
-      if(em_notSignal) {
-	if(fabs((tt->emADC()).at(i)-em_offset)>10) tt_accept = 0;
-      }
-    }
-
-    if(tt_accept==1) {
-      if(em_notSignal) {
-	
-	for(int i=0; i<emSlices; i++) {
-	  
-	  m_histTool->fillPPMEmEtaVsPhi(m_h_ppm_em_2d_etaPhi_tt_ped_runavg,
-	                          eta, phi, ((tt->emADC()).at(i)-em_offset));
-
-          // On Tier0 runrms hists are filled in post-processing
-	  if (m_environment == AthenaMonManager::online || m_onlineTest) {
-	    m_histTool->fillPPMEmEtaVsPhi(m_h_ppm_em_2d_etaPhi_tt_ped_instavg,
-	                          eta, phi, ((tt->emADC()).at(i)-em_offset));
-	    m_histTool->fillPPMEmEtaVsPhi(m_h_ppm_em_2d_etaPhi_tt_ped_instavg_B,
-	                          eta, phi, ((tt->emADC()).at(i)-em_offset));
-            int binx = 0;
-            int biny = 0;
-	    m_histTool->findBinPPMEmEtaVsPhi(m_h_ppm_em_2d_etaPhi_tt_ped_runavg,
-	                                                 eta, phi, binx, biny);
-	    double entries = 0.;
-	    double val = 0.;
-	    double rms = 0.;
-	    m_h_ppm_em_2d_etaPhi_tt_ped_runavg->GetBinInfo(binx, biny, entries,
-	                                                             val, rms);
-	    m_histTool->setBinPPMEmEtaVsPhi(m_h_ppm_em_2d_etaPhi_tt_ped_runrms,
-	                                binx, biny, rms, rms/sqrt(2.*entries));
-	    m_h_ppm_em_2d_etaPhi_tt_ped_instavg->GetBinInfo(binx, biny, entries,
-	                                                             val, rms);
-	    m_histTool->setBinPPMEmEtaVsPhi(m_h_ppm_em_2d_etaPhi_tt_ped_instrms,
-	                                binx, biny, rms, rms/sqrt(2.*entries));
-	    m_h_ppm_em_2d_etaPhi_tt_ped_instavg_B->GetBinInfo(binx, biny,
-	                                                    entries, val, rms);
-	    m_histTool->setBinPPMEmEtaVsPhi(m_h_ppm_em_2d_etaPhi_tt_ped_instrms_B,
-	                                binx, biny, rms, rms/sqrt(2.*entries));
-	  }
-	}	 
-      }	
-    }
-      
-    tt_accept = 1;
-
-    for(int i=0;i<hadSlices; i++) {
-      if(had_notSignal) {
-	if(fabs((tt->hadADC()).at(i)-had_offset)>10) tt_accept = 0;
-      }
-    }
-
-    if(tt_accept==1) {
-      if(had_notSignal) {
-
-	for(int i=0; i<hadSlices; i++) {
-	  
-	  m_histTool->fillPPMHadEtaVsPhi(m_h_ppm_had_2d_etaPhi_tt_ped_runavg,
-	                          eta, phi, ((tt->hadADC()).at(i)-had_offset));
-
-	  if (m_environment == AthenaMonManager::online || m_onlineTest) {
-	    m_histTool->fillPPMHadEtaVsPhi(m_h_ppm_had_2d_etaPhi_tt_ped_instavg,
-	                          eta, phi, ((tt->hadADC()).at(i)-had_offset));
-	    m_histTool->fillPPMHadEtaVsPhi(m_h_ppm_had_2d_etaPhi_tt_ped_instavg_B,
-	                          eta, phi, ((tt->hadADC()).at(i)-had_offset));
-            int binx = 0;
-            int biny = 0;
-	    m_histTool->findBinPPMHadEtaVsPhi(m_h_ppm_had_2d_etaPhi_tt_ped_runavg,
-	                                                 eta, phi, binx, biny);
-	    double entries = 0.;
-	    double val = 0.;
-	    double rms = 0.;
-	    m_h_ppm_had_2d_etaPhi_tt_ped_runavg->GetBinInfo(binx, biny, entries,
-	                                                             val, rms);
-	    m_histTool->setBinPPMHadEtaVsPhi(m_h_ppm_had_2d_etaPhi_tt_ped_runrms,
-	                                binx, biny, rms, rms/sqrt(2.*entries));
-	    m_h_ppm_had_2d_etaPhi_tt_ped_instavg->GetBinInfo(binx, biny,
-	                                                    entries, val, rms);
-	    m_histTool->setBinPPMHadEtaVsPhi(m_h_ppm_had_2d_etaPhi_tt_ped_instrms,
-	                                binx, biny, rms, rms/sqrt(2.*entries));
-	    m_h_ppm_had_2d_etaPhi_tt_ped_instavg_B->GetBinInfo(binx, biny,
-	                                                    entries, val, rms);
-	    m_histTool->setBinPPMHadEtaVsPhi(m_h_ppm_had_2d_etaPhi_tt_ped_instrms_B,
-	                                binx, biny, rms, rms/sqrt(2.*entries));
-	  }
-	}
-      }
-    }
-
     if (!simEm && !simHad && !datEm && !datHad) continue;
     
     //  Fill in error plots
     
+    const double eta = tt->eta();
+    const double phi = tt->phi();
     int em_mismatch = 0;
     int had_mismatch = 0;
     
